# deckmind

./: CLAUDE.md  DeckMind_PRD.md  README.md  ROADMAP.md  index.html  package-lock.json  package.json  vite.config.ts
.agent-os/product/: roadmap.md
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/actions/: mod.rs  router.rs  templates.rs
src-tauri/src/config/: mod.rs  schema.rs
src-tauri/src/context/: collector.rs  mod.rs
src-tauri/src/input/: gamepad.rs  keyboard.rs
src-tauri/src/session/: manager.rs  mod.rs  process.rs
src-tauri/src/storage/: memory.rs  mod.rs
src-tauri/src/voice/: downloader.rs  mod.rs  recorder.rs  transcriber.rs
src/components/: ActionMenu.tsx  ButtonRemapper.tsx  ControllerBar.tsx  DirectoryBrowser.tsx  DraftOverlay.tsx  MinimalStatusBar.tsx  ModelManager.tsx  NewSessionDialog.tsx  SessionTabs.tsx  SessionToast.tsx  SessionView.tsx  SettingsPanel.tsx  StartMenu.tsx  StatusDisplay.tsx  TerminalPane.tsx  TextInput.tsx  VoiceIndicator.tsx
src/hooks/: useActions.ts  useGamepad.ts  useKeyboard.ts  useSession.ts
src/stores/: appStore.ts
src/styles/: global.css
src/types/: index.ts
src/utils/: buildClaudeCommand.ts  buttonMappings.ts
