[package]
name = "deckmind"
version = "0.1.0"
description = "Steam Deck AI Operator Console"
authors = ["DeckMind"]
edition = "2021"

[lib]
name = "deckmind_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[[bin]]
name = "deckmind"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
tokio = { version = "1", features = ["full"] }
portable-pty = "0.8"
dirs = "6"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
log = "0.4"
env_logger = "0.11"
whisper-rs = "0.12"
cpal = "0.15"
